# Frontier

./: .clang-format  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Backend/: CMakeLists.txt
src/Backend/BackendThreadManager/: BackendThreadManager.cpp  BackendThreadManager.h  CMakeLists.txt
src/Backend/SettingsService/: CMakeLists.txt  Settings.h  SettingsClient.cpp  SettingsClient.h  SettingsClientInterface.h  SettingsDbHelpers.h  SettingsService.cpp  SettingsService.h  SettingsServiceInterface.h
src/Backend/TaskBarService/: CMakeLists.txt  TaskBarService.cpp  TaskBarService.h  TaskBarServiceInterface.h  TaskBarTypes.h
src/Backend/WallpaperService/: CMakeLists.txt  StaticColorWallpaper.h  WallpaperService.cpp  WallpaperService.h  WallpaperTypes.h
src/CoreUI/: CMakeLists.txt  ShellWindow.cpp  mainwindow.cpp  mainwindow.h
src/Enterprise/: CMakeLists.txt  EnterpriseService.cpp  EnterpriseService.h  EnterpriseSettingsModel.cpp  EnterpriseSettingsModel.h  EnterpriseWindow.cpp  EnterpriseWindow.h
src/Shared/: ArgParser.cpp  ArgParser.h  CMakeLists.txt  Log.h
src/Shared/Logging/: Log.cpp  Logger.cpp  Logger.h
src/Shared/Utilities/: EnumHelpers.h
src/UI/: CMakeLists.txt  ShellWindow.h
src/UI/CoreUI/: CMakeLists.txt  ShellWindow.cpp  ShellWindow.h  UIManager.cpp  UIManager.h
src/UI/CoreUI/Wallpaper/: CMakeLists.txt  DynamicColorWallpaper.cpp  DynamicColorWallpaper.h  WallpaperView.cpp  WallpaperView.h
src/UI/DesktopWidgets/: CMakeLists.txt
src/UI/Overlays/: CMakeLists.txt
src/UI/SharedUIComponents/: CMakeLists.txt
src/UI/SharedUIComponents/Widgets/: Overlay.cpp
src/UI/Widgets/: Overlay.h
tests/: CMakeLists.txt  main.cpp
tests/Backend/: CMakeLists.txt
tests/Backend/SettingsServiceTests/: CMakeLists.txt  SettingsClientTest.cpp  SettingsServiceTest.cpp
tests/support/: CMakeLists.txt
tests/support/Backend/SettingsService/: CMakeLists.txt  SettingsClientMock.h  SettingsServiceMock.h
tests/support/_Utilities/: CMakeLists.txt  FakeSettingSubscriber.h  TestMacros.h
